<resources>
    <string name="app_name">PixelArt</string>
    <string name="toolbox">Toolbox</string>
    <string name="clear">Clear</string>
    <string name="choose_your_color">Choose your color:</string>
    <string name="choose_your_drawstyle">Choose your drawstyle:</string>
    <string name="free">Free</string>
    <string name="line">Line</string>
    <string name="square">Square</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="erase">erase</string>
    <string name="action_open_library">Open library</string>
    <string name="action_update">Update this drawing</string>
    <string name="action_save_as">Save as...</string>
    <string name="empty_view_text">Get started by drawing something</string>
    <string name="choose">Choose</string>
</resources>
