<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.MainActivity">

    <item
        android:id="@+id/action_update"
        android:icon="@drawable/ic_save"
        android:title="@string/action_update"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_save_as"
        android:icon="@drawable/ic_save"
        android:title="@string/action_save_as"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_open_library"
        android:icon="@drawable/ic_folder"
        android:title="@string/action_open_library"
        app:showAsAction="never" />
</menu>